# lua-config-cpp-upgraded

./: .gitignore  CMakeLists.txt  README.md  luaconf.cpp  luaconf.h
lua/: depends.yaml
luaconf/: luaconf.h  value.h
test/: config.lua  main.cc
